--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@serwist/next": "^9.5.6",
     "@types/leaflet": "^1.9.21",
     "framer-motion": "^12.24.12",
     "leaflet": "^1.9.4",
@@ -16,7 +17,8 @@
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-leaflet": "^5.0.0"
+    "react-leaflet": "^5.0.0",
+    "serwist": "^9.5.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
